# into-the-grape-vine

./: .gitignore  README.md  build.sh  start-server.sh
backend/: .env.template  dropbox_auth.py  dropbox_file.py  dropbox_upsert.py  dropbox_utils.py  fetch_prices.py  pyproject.toml  server.py  setup_verify.py
chrome/: manifest.json
firefox/: manifest.json
into-the-grape-vine/: README.md
into-the-grape-vine/chrome/: background.js  content.js  manifest.json  popup.js
into-the-grape-vine/firefox/: manifest.json  popup.html
shared/: account-orders.js  background.js  content.js  popup.html  popup.js  utils.js  vine-orders.js
