[project]
name = "into-the-grape-vine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "dropbox>=11.36.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]
